--- a/src/templates.simple/axosimple.app/Shared/MainLayout.razor
+++ b/src/templates.simple/axosimple.app/Shared/MainLayout.razor
@@ -13,4 +13,6 @@
 
     <AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster />
 
+    <AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" />
+
 </div>
