--- a/src/core/src/AXOpen.Core.Blazor/Dialogs/AlertDialog/AxoAlertDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/Dialogs/AlertDialog/AxoAlertDialogLocator.razor
@@ -1,4 +1,4 @@
-﻿@namespace AXOpen.Core.Blazor.Dialogs
+﻿@*@namespace AXOpen.Core.Blazor.Dialogs
 @using AXOpen.Core.Blazor.AxoDialogs.Hubs;
 @using AXOpen.Core.Blazor.AxoDialogs;
 @using AXOpen.Dialogs;
@@ -41,3 +41,4 @@
         _dialogService.DialogInvoked -= OnDialogInvoked;
     }
 }
+*@
