--- a/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
@@ -2,7 +2,7 @@
 @using AXSharp.Abstractions.Dialogs.AlertDialog;
 @using AXSharp.Connector
 @using AXOpen.Data;
-@inject IAlertDialogService _alertDialogService
+@*@inject IAlertDialogService _alertDialogService*@
 
 @*<div class="container-fluid">
     <div class="row">
