small refactoring and user testing

--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
@@ -11,7 +11,7 @@
 @if (_axoDialogProxyService?.DialogInstance != null)
 {
     <RenderableContentControl Context="_axoDialogProxyService.DialogInstance"
-                              Presentation="Action"/>
+                              Presentation="Dialog"/>
 }
 
 
@@ -32,17 +32,13 @@
     [Parameter]
     public int DialogOpenDelay { get; set; }
 
-    private bool _showDialog { get; set;}
-
 
     private AxoDialogProxyService _axoDialogProxyService { get; set; }
-    //private DialogClient _dialogClient { get; set; }
 
 
 
     protected async override Task OnInitializedAsync()
     {
-        //_dialogClient = new DialogClient(_navigationManager.BaseUri);
 
         //if dialog id is null, set it to actual URI
         if (string.IsNullOrEmpty(DialogId))
@@ -56,31 +52,21 @@
         if (_axoDialogProxyService == null)
         {
             // if it does not exist, create new instance with observed objects and add it into container
-            _axoDialogProxyService = new AxoDialogProxyService(_navigationManager.BaseUri, DialogId, ObservedObjects);
+            _axoDialogProxyService = new AxoDialogProxyService(DialogId, ObservedObjects);
             await _dialogContainer.InitializeSignalR(_navigationManager.BaseUri);
             _dialogContainer.DialogProxyServices.Add(_axoDialogProxyService);
         }
 
-        //if (ObservedObjects != null)
-        //{
-        //    //_axoDialogProxyService.SetObservedObjects(ObservedObjects);
-        //    _axoDialogProxyService.SetObservedObjects(ObservedObjects);
-        //}
-
 
         Console.WriteLine($"Base initialized, ID: {DialogId}");
-        // _axoDialogProxyService.DialogInvoked += OnDialogInvoked;
         _axoDialogProxyService.DialogInvoked += OnDialogInvoked;
         base.OnInitialized();   
     }
-    public event EventHandler<AxoDialogEventArgs> DialogInvoked2;
 
     public async void OnDialogInvoked(object sender, AxoDialogEventArgs e)
     {
-        //signalR here????? 
         Console.WriteLine($"Invoke caught 1, ID: {DialogId}");
         await InvokeAsync(StateHasChanged);
-        //await _axoDialogProxyService.DialogClient.SendDialogOpen(DialogId);
         await _dialogContainer.DialogClient.SendDialogOpen(DialogId);
 
 
